# HoliTok

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
holitok/: __init__.py  checkpoint.py  cli.py  config.py  hub.py  io.py  model.py  presets.py  semantic.py  unified_tokenizer_wrapper.py
holitok/runtime/: __init__.py  bigvgan.py  layers.py  semantic.py
scripts/: extract_latent.sh  extract_semantic_feature.sh  reconstruct.sh  upload_hf_checkpoints.py
